--- a/PartyPalApp/MVVM/Views/EventHomePage.xaml
+++ b/PartyPalApp/MVVM/Views/EventHomePage.xaml
@@ -6,11 +6,11 @@
              Title="Evenementen">
 
     <Grid
-         RowDefinitions=".05*,.08*,.45*,.05*,.05*,.3*">
+         RowDefinitions=".05*,.08*,.45*,.05*,.05*,.05*,.27*">
         <Label
             FontSize="Body"
             HorizontalOptions="Center"
-            Text="Evenementen"
+            Text="Alle Evenementen"
             TextColor="Black"
             Margin="0,10,0,0"
             FontAttributes="Bold"/>
@@ -28,7 +28,6 @@
         <CarouselView x:Name="EventCarousel"
             IndicatorView="indicatorView"
             Grid.Row="2"
-            ItemsSource="{Binding Events}"
             PeekAreaInsets="30">
             <!-- Zorgt voor snapping tussen de events -->
             <CarouselView.ItemsLayout>
@@ -110,15 +109,21 @@
             IndicatorSize="8"
             SelectedIndicatorColor="#f01c34"
             VerticalOptions="Center"/>
+        <Label
+            FontSize="Body"
+            HorizontalOptions="Center"
+            Text="Activiteiten bij het opkomend Evenement"
+            TextColor="Black"
+            FontAttributes="Bold"
+            Grid.Row="4"/>
 
 
         <ListView
-            x:Name="EventListView"
+            x:Name="ActivityListView"
             Margin="0,-40,0,0"
-            Grid.Row="5"
+            Grid.Row="6"
             SeparatorVisibility="None"
             HasUnevenRows="True"
-            ItemsSource="{Binding Events}"
             SelectionMode="None">
             <ListView.ItemTemplate>
                 <DataTemplate>
@@ -128,20 +133,20 @@
                                 <Grid Padding="10">
                                     <Frame CornerRadius="20" HasShadow="True">
                                         <StackLayout Orientation="Horizontal">
-                                            <!-- Border around the date labels -->
+                                            <!-- Activity Name and Time -->
                                             <Frame CornerRadius="10" BackgroundColor="#f01c34" Padding="4" HeightRequest="80" WidthRequest="70">
-                                                <StackLayout>
-                                                    <Label Text="{Binding Date.Day}" FontSize="20" HorizontalOptions="Center" TextColor="White" FontAttributes="Bold"/>
-                                                    <Label Text="{Binding Date, StringFormat='{0:MMM}'}" FontSize="15" HorizontalOptions="Center" TextColor="White" FontAttributes="Bold"/>
-                                                    <Label Text="{Binding Date.Year}" FontSize="15" HorizontalOptions="Center" TextColor="White" FontAttributes="Bold"/>
+                                                <StackLayout VerticalOptions="Center">
+                                                    <Label VerticalOptions="Center" FontSize="15" Text="{Binding StartTime, StringFormat='{0:HH:mm}'}" FontAttributes="Bold" TextColor="White"/>
+                                                    <Label VerticalOptions="Center" FontSize="15" Text="{Binding EndTime, StringFormat='{0:HH:mm}'}"  FontAttributes="Bold" TextColor="White"/>
                                                 </StackLayout>
                                             </Frame>
 
                                             <!-- Separate the event name more to the left -->
                                             <StackLayout Margin="30,0,0,0" VerticalOptions="Center">
-                                                <Label VerticalOptions="Center" FontSize="17" Text="{Binding Title}" WidthRequest="250"/>
-                                                <Label VerticalOptions="Center" FontSize="17" Text="{Binding Description}" WidthRequest="250"/>
+                                                <Label VerticalOptions="Center" FontSize="17" Text="{Binding Name}" WidthRequest="250"/>
+                                                <Label VerticalOptions="Center" FontSize="15" Text="{Binding EventId}" FontAttributes="Bold" TextColor="Black"/>
                                             </StackLayout>
+
                                         </StackLayout>
                                     </Frame>
                                 </Grid>
