--- a/PartyPalApp/MVVM/Views/SettingsPage.xaml
+++ b/PartyPalApp/MVVM/Views/SettingsPage.xaml
@@ -4,84 +4,85 @@
              x:Class="PartyPalApp.SettingsPage"
              Title="Instellingen"
              BackgroundImageSource="background.png">
+    <ScrollView>
+        <StackLayout>
 
-    <StackLayout>
+            <Frame BackgroundColor="White" 
+                   CornerRadius="10" 
+                   Padding="10" 
+                   WidthRequest="350"
+                   Margin="0,20,0,20">
+                <StackLayout>
+                    <Label x:Name="AboutTitleLabel"
+                        Text="Over PartyPal"
+                           FontSize="Title"
+                           FontAttributes="Bold"
+                           HorizontalOptions="Center"
+                           Margin="0,0,0,10"/>
+                    <Label x:Name="AboutDescriptionLabel"
+                        Text="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce eget sapien eu lectus dapibus dignissim nec in odio. Quisque facilisis sagittis purus vel eleifend. Sed id sollicitudin lectus."
+                           FontSize="Medium"
+                           HorizontalOptions="Center"
+                           Margin="0,0,0,10"/>
+                </StackLayout>
+            </Frame>
 
-        <Frame BackgroundColor="White" 
-               CornerRadius="10" 
-               Padding="10" 
-               WidthRequest="350"
-               Margin="0,20,0,20">
-            <StackLayout>
-                <Label x:Name="AboutTitleLabel"
-                    Text="Over PartyPal"
-                       FontSize="Title"
-                       FontAttributes="Bold"
-                       HorizontalOptions="Center"
-                       Margin="0,0,0,10"/>
-                <Label x:Name="AboutDescriptionLabel"
-                    Text="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce eget sapien eu lectus dapibus dignissim nec in odio. Quisque facilisis sagittis purus vel eleifend. Sed id sollicitudin lectus."
-                       FontSize="Medium"
-                       HorizontalOptions="Center"
-                       Margin="0,0,0,10"/>
-            </StackLayout>
-        </Frame>
+            <Frame BackgroundColor="White" 
+                   CornerRadius="10" 
+                   Padding="10" 
+                   WidthRequest="350"
+                   HeightRequest="285"
+                   Margin="0,20,0,20">
+                <StackLayout>
+                    <Button x:Name="PrivacyAndSecurityButton"
+                        Text="Privacy en Beveiliging"
+                            FontSize="Medium"
+                            BackgroundColor="Red"
+                            TextColor="White"
+                            FontAttributes="Bold"
+                            Margin="0,10,0,20"/>
+                    <Button x:Name="AppearanceButton"
+                        Text="Uiterlijk van de App"
+                            FontSize="Medium"
+                            BackgroundColor="Red"
+                            TextColor="White"
+                            FontAttributes="Bold"
+                            Margin="0,0,0,20"/>
+                    <Button x:Name="ProblemButton"
+                        Text="Probleem aangeven"
+                            FontSize="Medium"
+                            BackgroundColor="Red"
+                            TextColor="White"
+                            FontAttributes="Bold"
+                            Margin="0,0,0,20"/>
+                    <Button x:Name="FeedbackButton"
+                        Text="Feedback geven"
+                            FontSize="Medium"
+                            BackgroundColor="Red"
+                            TextColor="White"
+                            FontAttributes="Bold"
+                            Margin="0,0,0,10"/>
+                </StackLayout>
+            </Frame>
 
-        <Frame BackgroundColor="White" 
-               CornerRadius="10" 
-               Padding="10" 
-               WidthRequest="350"
-               HeightRequest="285"
-               Margin="0,20,0,20">
-            <StackLayout>
-                <Button x:Name="PrivacyAndSecurityButton"
-                    Text="Privacy en Beveiliging"
+            <Frame
+                BackgroundColor="White" 
+                CornerRadius="10" 
+                Padding="10" 
+                Margin="20,20,20,20">
+                <StackLayout>
+                    <Button 
+                        x:Name="AdminButton"
+                        Text="Admin Functies"
                         FontSize="Medium"
                         BackgroundColor="Red"
                         TextColor="White"
                         FontAttributes="Bold"
-                        Margin="0,10,0,20"/>
-                <Button x:Name="AppearanceButton"
-                    Text="Uiterlijk van de App"
-                        FontSize="Medium"
-                        BackgroundColor="Red"
-                        TextColor="White"
-                        FontAttributes="Bold"
-                        Margin="0,0,0,20"/>
-                <Button x:Name="ProblemButton"
-                    Text="Probleem aangeven"
-                        FontSize="Medium"
-                        BackgroundColor="Red"
-                        TextColor="White"
-                        FontAttributes="Bold"
-                        Margin="0,0,0,20"/>
-                <Button x:Name="FeedbackButton"
-                    Text="Feedback geven"
-                        FontSize="Medium"
-                        BackgroundColor="Red"
-                        TextColor="White"
-                        FontAttributes="Bold"
-                        Margin="0,0,0,10"/>
-            </StackLayout>
-        </Frame>
+                        Margin="0,10,0,10"
+                        Clicked="AdminButton_Clicked"/>
+                </StackLayout>
+            </Frame>
 
-        <Frame
-            BackgroundColor="White" 
-            CornerRadius="10" 
-            Padding="10" 
-            Margin="20,20,20,20">
-            <StackLayout>
-                <Button 
-                    x:Name="AdminButton"
-                    Text="Admin Functies"
-                    FontSize="Medium"
-                    BackgroundColor="Red"
-                    TextColor="White"
-                    FontAttributes="Bold"
-                    Margin="0,10,0,20"
-                    Clicked="AdminButton_Clicked"/>
-            </StackLayout>
-        </Frame>
-
-    </StackLayout>
+        </StackLayout>
+    </ScrollView>
 </ContentPage>
