--- a/PartyPalApp/MVVM/Views/AdminPage.xaml
+++ b/PartyPalApp/MVVM/Views/AdminPage.xaml
@@ -20,8 +20,8 @@
                     <Entry x:Name="EventTitleEntry" Margin="-5" Placeholder="Geef je Event een naam.." PlaceholderColor="Grey" Text="{Binding CurrentEvent.Title}"/>
                     <Entry x:Name="EventDescriptionEntry" Margin="-5" Placeholder="Event beschrijving..." PlaceholderColor="Grey" Text="{Binding CurrentEvent.Description}"/>
                     <Button x:Name="SelectEventImageButton" Text="Selecteer Afbeelding" Clicked="SelectEventImageButton_Clicked" BackgroundColor="White" TextColor="Black" BorderWidth="1" BorderColor="Black"/>
-                    <Frame Margin="10">
-                        <Image x:Name="SelectedEventImage" HeightRequest="100" WidthRequest="100"/>
+                    <Frame Margin="10"  WidthRequest="350" HeightRequest="200">
+                        <Image x:Name="SelectedEventImage" Aspect="AspectFill"/>
                     </Frame>
                     <DatePicker x:Name="EventDatePicker" Date="{Binding CurrentEvent.Date}"/>
 
